:bug: [UR-51] fix textarea overflow bug

--- a/src/components/Fields/TextArea.scss
+++ b/src/components/Fields/TextArea.scss
@@ -99,6 +99,8 @@ $textFieldLabelColor: $charcoal !default;
     }
 
     &-inner {
+        display: flex;
+        flex-direction: column;
         height: 100%;
 
         textarea {
